--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,11 +2,18 @@
 
 
 
-html,
-body {
-  height: 100%;
-}
 
 body {
   @apply min-h-screen bg-gradient-to-br from-[#0b0a15] via-[#24164d] to-black text-white;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+ 
+  scrollbar-width: none;
+  
 }
